package edu.iuh.fit.Bai5;

// ==================== DECORATOR PATTERN ====================
// Component interface - Thành phần thanh toán cơ bản
public interface PaymentComponent {
    String getDescription();
    double getCost();
}

